Try to fix scrolling on mobile/tablet

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -15,6 +15,12 @@
   font-size: 0.9em;
 }
 
+body {
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
+  position: fixed;
+}
+
 .canvas {
   position: absolute;
   width: 1024px;
